feat-api: implemented elasticsearch in service route in "/create" and "/search". Can be able get service list types, service types details and search  for a service

--- a/mm-api-node/package.json
+++ b/mm-api-node/package.json
@@ -12,6 +12,7 @@
     "build": "tsup"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.19.1",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@paralleldrive/cuid2": "^2.2.2",
