--- a/mm-api-node/docker-compose.yml
+++ b/mm-api-node/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     container_name: mini_marketplace
@@ -12,4 +10,13 @@ services:
       POSTGRES_PASSWORD: docker
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
+    restart: always
+
+  redis:
+    container_name: mini_marketplace_redis
+    image: redis:7-alpine
+    ports:
+      - 6379:6379
+    volumes:
+      - ./data/redis:/data
     restart: always
