--- a/mm-api-node/.env.example
+++ b/mm-api-node/.env.example
@@ -19,8 +19,11 @@ REDIS_PORT="6379"
 REDIS_HOST="localhost"
 REDIS_PORT="6379"
 
-# Elasticsearch
+# Elasticsearch (local dev)
 HOST_ELASTICSEARCH="http://elasticsearch:9200"
+
+# Elasticsearch (docker-compose)
+HOST_ELASTICSEARCH="http://mini_marketplace_es:9200"
 
 # Hosts
 HOST_URL="http://localhost:3000"
