--- a/mm-api-node/Dockerfile
+++ b/mm-api-node/Dockerfile
@@ -1,28 +1,27 @@
-# Build stage
 FROM node:20-alpine AS builder
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
 RUN npm run build
 
-# Runtime stage
 FROM node:20-alpine
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm install --omit=optional 
 
-RUN apk add --no-cache postgresql-client
+RUN apk add --no-cache postgresql-client curl
 
 COPY --from=builder /app/build ./build
 
 COPY drizzle.config.json ./
 
-RUN mkdir -p /app/src/database/migrations
+COPY src ./src
 
-COPY src/database/migrations ./src/database/migrations
-
+COPY .env.production .env.production
 COPY entrypoint.sh ./
 RUN chmod +x entrypoint.sh
 
