--- a/mm-api-node/package.json
+++ b/mm-api-node/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "prod": "ts-node build/server.js",
     "dev": "tsx watch src/server.ts",
-    "build": "tsup"
+    "build": "tsup",
+    "seed": "tsx src/database/seed.ts"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.19.1",
