doc: update .env.example

--- a/mm-api-node/.env.example
+++ b/mm-api-node/.env.example
@@ -25,5 +25,11 @@ HOST_ELASTICSEARCH="http://elasticsearch:9200"
 # Elasticsearch (docker-compose)
 HOST_ELASTICSEARCH="http://mini_marketplace_es:9200"
 
-# Hosts
+# Hosts (docker-compose)
 HOST_URL="http://localhost:3000"
+
+# Hosts (local dev)
+HOST_URL="http://localhost:5173"
+
+# JWT
+JWT_SECRET="randomsecretloremjwtsecret"
