--- a/mm-api-node/package.json
+++ b/mm-api-node/package.json
@@ -16,6 +16,7 @@
     "@elastic/elasticsearch": "^8.19.1",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
+    "@fastify/jwt": "^10.0.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/ioredis": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
