--- a/mm-front-svelte/package.json
+++ b/mm-front-svelte/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "lucide-svelte": "^0.544.0",
+    "socket.io-client": "^4.8.1",
     "svelte-calendar": "^3.1.6",
     "tailwindcss": "^4.1.13"
   },
