doc: update readme and environment

--- a/mm-api-node/.env.example
+++ b/mm-api-node/.env.example
@@ -1,35 +1,20 @@
-NODE_ENV="development"
+# (docker-compose)
+NODE_ENV="production"
 
-# Database (local dev)
-DB_HOST="localhost"
-DB_PORT="5432"
-DATABASE_URL="postgres://postgres:docker@localhost:5432/mini_marketplace"
-DATABASE_CLIENT="pg"
-
-# Database (docker-compose)
+# Database 
 DB_HOST="db"
 DB_PORT="5432"
 DATABASE_URL="postgres://postgres:postgres@db:5432/mini_marketplace"
 
-# Redis cache (docker-compose)
+# Redis cache
 REDIS_HOST="redis"
 REDIS_PORT="6379"
 
-# Redis cache (local dev)
-REDIS_HOST="localhost"
-REDIS_PORT="6379"
-
-# Elasticsearch (local dev)
-HOST_ELASTICSEARCH="http://elasticsearch:9200"
-
-# Elasticsearch (docker-compose)
+# Elasticsearch 
 HOST_ELASTICSEARCH="http://mini_marketplace_es:9200"
 
-# Hosts (docker-compose)
+# Hosts
 HOST_URL="http://localhost:3000"
-
-# Hosts (local dev)
-HOST_URL="http://localhost:5173"
 
 # JWT
 JWT_SECRET="randomsecretloremjwtsecret"
