fix: declared new env and convert entrypoint.sh to LF and set executable

--- a/mm-api-node/.env.example
+++ b/mm-api-node/.env.example
@@ -5,6 +5,7 @@ NODE_ENV="production"
 DB_HOST="db"
 DB_PORT="5432"
 DATABASE_URL="postgres://postgres:postgres@db:5432/mini_marketplace"
+DATABASE_CLIENT="pg"
 
 # Redis cache
 REDIS_HOST="redis"
